# JustCause3-Hacking

./: README.md
code/: README.md
code/demos/: CMakeLists.txt  README.md
code/demos/0_shared_code/: README.md  include_all.cmake
code/demos/0_shared_code/src/shared/constants/: constants.hpp
code/demos/0_shared_code/src/shared/fake_xinput_exports/: fake_xinput_exports.cpp  fake_xinput_exports.hpp
code/demos/0_shared_code/src/shared/forced_includes/: macros.hpp
code/demos/0_shared_code/src/shared/utils/: utils.cpp  utils.hpp
code/demos/1_hooking_the_game/: CMakeLists.txt  README.md
code/demos/1_hooking_the_game/src/fake_xinput_exports/: fake_xinput_exports.cpp  fake_xinput_exports.hpp
code/demos/1_hooking_the_game/src/globals/: globals.hpp
code/demos/1_hooking_the_game/src/logic/: logic.cpp  logic.hpp
code/demos/2_intercepting_threads/: CMakeLists.txt
code/demos/2_intercepting_threads/src/: main.cpp
code/demos/3_taking_over_the_window/: CMakeLists.txt  README.md
code/demos/3_taking_over_the_window/src/: main.cpp
code/demos/4_intercepting_win32_messages/: CMakeLists.txt
code/demos/4_intercepting_win32_messages/src/: main.cpp  window_message_registry.hpp
code/demos/cmake/: macros.cmake
extracted strings/: README.md
reverse engineered data/window messages and how the game handles them/: README.md  window messages and how the game handles them.md
